# drawtext-gl-freetype-harfbuzz

./: CMakeLists.txt  LICENSE  README.md  font.cpp  font.h  main.cpp  scope_guard.h  shader.cpp  shader.h  skyline_binpack.cpp  skyline_binpack.h  text_render.cpp  text_render.h  text_run.cpp  text_run.h  texture_atlas.cpp  texture_atlas.h
